[package]
name = "flowhkp"
license = "AGPL-3.0-or-later"
description = "A proxy server converting HKP to Flowcrypt's API"
version = "0.1.0"
edition = "2024"
categories = ["email", "security", "cryptography", "authentication"]
keywords = ["openpgp", "pgp", "signing"]

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
quick_cache = "0.6.18"
reqwest = "0.13.2"
sequoia-openpgp = "2.2.0"
snafu = "0.9.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "std"] }
tracing-journald = "0.3.2"
tracing-subscriber = "0.3.22"
url = "2.5.8"
